--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "simple-api-mongo",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
